--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body background="home bg.jpg">
 
-<a href="index.html">Animals</a>
+<a href="home.html">Animals</a>
 <br><br>
 <a href="bedroom.html">bedroom</a>
 <br><br>
