--- a/bedroom.html
+++ b/bedroom.html
@@ -34,7 +34,7 @@ function setup(){
 }
 
 function preload(){
-    img = loadImage('bedroom.jpg');
+    img = loadImage('bedroom bg.jpg');
 }
 
 function draw(){
