--- a/desk.html
+++ b/desk.html
@@ -34,7 +34,7 @@ function setup(){
 }
 
 function preload(){
-    img = loadImage('desks.jpg');
+    img = loadImage('desk.jpg');
 }
 
 function draw(){
